app/assets/stylesheets/application.tailwind.css
@import "fonts";
@import "font_awesome";
@import "tailwindcss/base";
@import "tailwindcss/components";

@layer components {
  .bg-hover {
    @apply bg-aoc-gray bg-opacity-10;
  }

  .button {
    @apply form-element cursor-pointer hover:text-gold;
  }

  .button-red {
    @apply form-element cursor-pointer hover:text-wagon-red;
  }

  .button-slack {
    @apply form-element cursor-pointer hover:text-aoc-atmospheric;
  }

  .calendar-tile {
    @apply w-14 h-14 rounded-xl lg:w-20 lg:h-20 lg:rounded-2xl flex items-center justify-center border border-aoc-gray-darker hover:bg-hover;
  }

  code:not(pre code) {
    @apply px-1 bg-aoc-gray-darkest border border-aoc-gray-darker rounded;
  }

  .code-highlight pre {
    @apply px-6 py-4 border border-aoc-gray-darker rounded;
    @apply bg-dark !important;

    position: relative;
  }

  .code-highlight pre::before {
    content: attr(lang);
    text-transform: capitalize;

    position: absolute;
    top: -1px;
    right: -1px;

    @apply px-2 border border-aoc-gray-darker text-aoc-gray font-medium text-sm rounded-tr;
  }

  details > summary {
    list-style: none;
  }

  details > summary::marker,
  details > summary::-webkit-details-marker {
    display: none;
  }

  .disabled {
    @apply pointer-events-none bg-aoc-gray-darker text-aoc-gray-dark bg-opacity-40;

    /* For some weird reason, a background opacity >= 50% changes the text color on mobile. WTF. */
  }

  .form-element {
    @apply px-3 py-2 leading-normal border border-aoc-gray-darker rounded-none disabled:disabled;
  }

  .input {
    @apply form-element w-48 bg-aoc-gray-darkest;
  }

  /* Hide the spinner for numerical input */
  input[type=number] {
    -moz-appearance: textfield;
  }

  input[type=number]::-webkit-inner-spin-button,
  input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }

  .link-explicit {
    @apply underline decoration-dotted underline-offset-4 hover:decoration-solid;
  }

  .link-external {
    @apply text-aoc-green;
  }

  .link-internal {
    @apply text-aoc-gold;
  }

  .link-slack {
    @apply text-aoc-atmospheric hover:text-shadow-atmospheric;
  }

  .no-ring {
    @apply ring-transparent ring-offset-transparent;
  }

  .rank-down {
    @apply fas fa-angles-down text-wagon-red text-opacity-50;
  }

  .rank-equal {
    @apply fas fa-equals text-aoc-gray-darker text-opacity-50;
  }

  .rank-up {
    @apply fas fa-angles-up text-aoc-green text-opacity-50;
  }

  .scrollbar-chrome::-webkit-scrollbar {
    @apply h-1.5 w-1.5;
  }

  .scrollbar-chrome::-webkit-scrollbar-thumb {
    @apply bg-aoc-gray-dark rounded-full group-hover:bg-aoc-gray;
  }

  .scrollbar-hide {
    scrollbar-width: none;
  }

  .scrollbar-hide::-webkit-scrollbar {
    display: none;
  }

  .strong {
    @apply text-white;

    text-shadow: 0 0 5px #fff;
  }

  .text-bronze {
    @apply text-aoc-bronze;

    text-shadow: 0 0 5px #fc9;
  }

  .text-gold {
    @apply text-aoc-gold;

    text-shadow: 0 0 5px #ff6;
  }

  .text-shadow-atmospheric {
    text-shadow: 0 0 5px #79a2d8;
  }

  .text-shadow-green {
    text-shadow: 0 0 2px #0c0, 0 0 5px #0c0;
  }

  .text-shadow-red {
    text-shadow: 0 0 2px #fd1015, 0 0 5px #fd1015;
  }

  .text-silver {
    @apply text-aoc-silver;

    text-shadow: 0 0 5px #99c;
  }

  @keyframes wiggle {
    0% { transform: rotate(0deg); }
    70% { transform: rotate(0deg); }
    75% { transform: rotate(2.5deg); }
    80% { transform: rotate(-5deg); }
    85% { transform: rotate(7.5deg); }
    90% { transform: rotate(-7.5deg); }
    95% { transform: rotate(5deg); }
    100% { transform: rotate(-2.5deg); }
  }

  .wiggle {
    animation: wiggle 3s infinite;
  }
}

@import "tailwindcss/utilities";

